# fluffi

./: .gitattributes  .gitignore  CONTRIBUTING.md  Jenkinsfile  LICENSE.md  README.md  about.md  getting_started.md  overview.md  technical_details.md  usage.md
agents/monitoring_client/: README.md
agents/pxe_images/: README.md  armbian.md  odroid.md  ubuntu.md  windows.md
core/: FluffiV1.sln  build.bat  makefile
core/CaRRoT/: README.md  analyze.py  carrot.go  db.go  entropy.go  go.mod  hist.py  ints.go  intstring.go  magic.go  main.go  main_test.go  makefile  mutate.go  strings.go  superstructure.go
core/FluffiTester/: AFLMutatorTester.cpp  AbstractionLayerTester.cpp  BlockCoverageCacheTester.cpp  CommIntTester.cpp  CommPartnerManagerTester.cpp  ExternalMutatorTester.cpp  ExternalProcessTester.cpp  FLUFFILogTester.cpp  FluffiTester.vcxproj  FluffiTester.vcxproj.filters  GMDatabaseManagerTester.cpp  GMWorkerThreadStateBuilderTester.cpp  GarbageCollectorWorkerTester.cpp  GetStatusRequestHandlerTester.cpp  HonggfuzzMutatorTester.cpp  LMDatabaseManagerTester.cpp  LMWorkerThreadStateBuilderTester.cpp  RadamsaMutatorTester.cpp  RegisterAtLMRequestHandlerTester.cpp  SharedMemIPCTester.cpp  TETestResultManagerTester.cpp  TEWorkerThreadStateBuilderTester.cpp  TGTestcaseManagerTester.cpp  TGWorkerThreadStateBuilderTester.cpp  TRWorkerThreadStateBuilderTester.cpp  TestExecutorDynRioMultiTester.cpp  TestExecutorDynRioSingleTester.cpp  TestExecutorGDBTester.cpp  WorkerWeightCalculatorTester.cpp  stdafx.cpp  stdafx.h  targetver.h  utilTester.cpp
core/GlobalManager/: GMDatabaseManager.cpp  GMDatabaseManager.h  GMWorkerThreadState.h  GMWorkerThreadStateBuilder.cpp  GMWorkerThreadStateBuilder.h  GlobalManager.cpp  GlobalManager.vcxproj  GlobalManager.vcxproj.filters  LMMonitorWorker.cpp  LMMonitorWorker.h  RegisterAtGMRequestHandler.cpp  RegisterAtGMRequestHandler.h  stdafx.cpp  stdafx.h  targetver.h
core/LocalManager/: DBCleanupWorker.cpp  DBCleanupWorker.h  GetCurrentBlockCoverageRequestHandler.cpp  GetCurrentBlockCoverageRequestHandler.h  GetFuzzJobConfigurationRequestHandler.cpp  GetFuzzJobConfigurationRequestHandler.h  GetLMConfigurationRequestHandler.cpp  GetLMConfigurationRequestHandler.h  GetNewCompletedTestcaseIDsRequestHandler.cpp  GetNewCompletedTestcaseIDsRequestHandler.h  GetTestcaseToMutateRequestHandler.cpp  GetTestcaseToMutateRequestHandler.h  InstanceControlWorker.cpp  InstanceControlWorker.h  InstanceMonitorWorker.cpp  InstanceMonitorWorker.h  IsAgentWelcomedRequestHandler.cpp  IsAgentWelcomedRequestHandler.h  LMDatabaseManager.cpp  LMDatabaseManager.h  LMGetStatusRequestHandler.cpp  LMGetStatusRequestHandler.h  LMWorkerThreadState.h  LMWorkerThreadStateBuilder.cpp  LMWorkerThreadStateBuilder.h  LocalManager.cpp  LocalManager.vcxproj  LocalManager.vcxproj.filters  PutTestEvaluationRequestHandler.cpp  PutTestEvaluationRequestHandler.h  RegisterAtLMRequestHandler.cpp  RegisterAtLMRequestHandler.h  ReportNewMutationsRequestHandler.cpp  ReportNewMutationsRequestHandler.h  ReportTestcaseWithNoResultRequestHandler.cpp  ReportTestcaseWithNoResultRequestHandler.h  StatusOfInstance.h  WorkerWeightCalculator.cpp  WorkerWeightCalculator.h  stdafx.cpp  (+2 more)
core/Oedipus/: README.md  go.mod  hexdetails.py  makefile
core/SharedCode/: CommInt.cpp  CommInt.h  CommProxyWorker.cpp  CommProxyWorker.h  CommWorker.cpp  CommWorker.h  DebugExecutionOutput.cpp  DebugExecutionOutput.h  ExternalProcess.cpp  ExternalProcess.h  FLUFFILogHandler.cpp  FLUFFILogHandler.h  FluffiBasicBlock.cpp  FluffiBasicBlock.h  FluffiLMConfiguration.cpp  FluffiLMConfiguration.h  FluffiModuleNameToID.cpp  FluffiModuleNameToID.h  FluffiServiceAndWeight.cpp  FluffiServiceAndWeight.h  FluffiServiceDescriptor.cpp  FluffiServiceDescriptor.h  FluffiSetting.cpp  FluffiSetting.h  FluffiTestResult.cpp  FluffiTestResult.h  FluffiTestcaseID.cpp  FluffiTestcaseID.h  (+23 more)
core/dependencies/dynamorio/drcovMulti/: CMakeLists.txt  drcovMulti.c
docs/: about.md  getting_started.md  technical_details.md  tutorial.md  usage.md
ida_scripts/: colourBBs.py  cov2ida.py  exportBBs.py  idaOutputDebugString.py
monitoring_client/: README.md
(+609 files in other folders)
